--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Spoon PH</string>
     <string name="title_activity_main">Spoon PH</string>
-    <string name="package_name">ph.spoon.beta</string>
-    <string name="custom_url_scheme">ph.spoon.beta</string>
+    <string name="package_name">ph.spoon.betaspoon</string>
+    <string name="custom_url_scheme">ph.spoon.betaspoon</string>
 </resources>
